## Process this file with automake to produce Makefile.in
## vi: set noexpandtab:
 
ACLOCAL_AMFLAGS = -I m4
SUBDIRS = . tools test
lib_LTLIBRARIES = libsmile.la
libsmile_la_SOURCES = \
	AccessPacket.cpp \
	AS400.cpp \
	AS400Impl.cpp \
	AsynchronousHostService.cpp \
	AttributeUtility.cpp \
	CallProgramFailureReply.cpp \
	CallProgramReply.cpp \
	CallProgramRequest.cpp \
	CentralClient.cpp \
	CentralService.cpp \
	CloseFileReply.cpp \
	CloseFileRequest.cpp \
	Command.cpp \
	CommitFileRequest.cpp \
	Connection.cpp \
	ConsoleLogWriter.cpp \
	CreateDirectoryRequest.cpp \
	DeleteDirectoryRequest.cpp \
	DeleteFileRequest.cpp \
	EndJobRequest.cpp \
	EndSignonServiceRequest.cpp \
	ErrnoException.cpp \
	ExceptionBase.cpp \
	ExchangeRandomSeedsReply.cpp \
	ExchangeRandomSeedsRequest.cpp \
	FileClient.cpp \
	FileExchangeAttributesReply.cpp \
	FileExchangeAttributesRequest.cpp \
	FileService.cpp \
	FileServiceException.cpp \
	FileServiceReply.cpp \
	HandshakeService.cpp \
	HostService.cpp \
	HostServiceException.cpp \
	IcuException.cpp \
	IfsDirectory.cpp \
	IfsFile.cpp \
	IfsFileHandle.cpp \
	IfsLockHandle.cpp \
	IfsObject.cpp \
	IfsObjectName.cpp \
	InvalidStateException.cpp \
	ListAttributesReply.cpp \
	ListAttributesRequest.cpp \
	LockBytesReply.cpp \
	LockBytesRequest.cpp \
	Locker.cpp \
	LogEvent.cpp \
	LogEventFormatter.cpp \
	Logger.cpp \
	LogUtil.cpp \
	LogWriter.cpp \
	MessageFile.cpp \
	MessageReply.cpp \
	NationalLanguageVersion.cpp \
	NetworkAttribute.cpp \
	NlsExchangeAttributesReply.cpp \
	NlsExchangeAttributesRequest.cpp \
	Notification.cpp \
	Notifier.cpp \
	OpenFileReply.cpp \
	OpenFileRequest.cpp \
	OpenSslException.cpp \
	OS400DataStructure.cpp \
	OS400ErrnoException.cpp \
	OS400Exception.cpp \
	OS400Message.cpp \
	OS400NameValuePair.cpp \
	OS400Value.cpp \
	OS400ValueGroupMember.cpp \
	OS400ValueManipulator.cpp \
	OS400Version.cpp \
	Packet.cpp \
	PacketReply.cpp \
	PacketRequest.cpp \
	PortReply.cpp \
	PortRequest.cpp \
	Program.cpp \
	ProgramParameter.cpp \
	ProgramParameterList.cpp \
	Properties.cpp \
	QlgPathName.cpp \
	QsysObject.cpp \
	QsysObjectName.cpp \
	ReadFileReply.cpp \
	ReadFileRequest.cpp \
	RemoteCommandClient.cpp \
	RemoteCommandExchangeAttributesReply.cpp \
	RemoteCommandExchangeAttributesRequest.cpp \
	RemoteCommandService.cpp \
	RemoteCommandServiceException.cpp \
	Reply.cpp \
	Request.cpp \
	ReturnCode16BitReply.cpp \
	ReturnCodeReply.cpp \
	RunCommandReply.cpp \
	RunCommandRequest.cpp \
	RunLengthEncoder.cpp \
	SecureConnection.cpp \
	ServiceFactory.cpp \
	ServicePool.cpp \
	ServiceProgramProcedure.cpp \
	SignonEndServerRequest.cpp \
	SignonExchangeAttributesReply.cpp \
	SignonExchangeAttributesRequest.cpp \
	SignonInfoReply.cpp \
	SignonInfoRequest.cpp \
	SignonService.cpp \
	SignonTextConverter.cpp \
	SimpleLogEventFormatter.cpp \
	StartServerReply.cpp \
	StartServerRequest.cpp \
	StaticInitializer.cpp \
	System.cpp \
	SystemValue.cpp \
	SystemValueGroup.cpp \
	Text.cpp \
	TextConverter.cpp \
	TypeInfo.cpp \
	UnlockBytesRequest.cpp \
	WriteFileReply.cpp \
	WriteFileRequest.cpp
libsmile_la_LDFLAGS = -version-info $(PACKAGE_VERSION) -rpath $(libdir)
pkginclude_HEADERS = \
	smile/AS400.hpp \
	smile/AuditMode.hpp \
	smile/Command.hpp \
	smile/ConsoleLogWriter.hpp \
	smile/Duplicable.hpp \
	smile/ErrnoException.hpp \
	smile/Exception.hpp \
	smile/ExceptionBase.hpp \
	smile/FileServiceException.hpp \
	smile/HostServiceException.hpp \
	smile/IcuException.hpp \
	smile/IfsDirectory.hpp \
	smile/IfsFile.hpp \
	smile/IfsFileHandle.hpp \
	smile/IfsLockHandle.hpp \
	smile/IfsObject.hpp \
	smile/IfsObjectName.hpp \
	smile/InvalidStateException.hpp \
	smile/LogEvent.hpp \
	smile/LogEventFormatter.hpp \
	smile/Logger.hpp \
	smile/LogLevel.hpp \
	smile/LogWriter.hpp \
	smile/MessageFile.hpp \
	smile/NetworkAttribute.hpp \
	smile/Notification.hpp \
	smile/Notifier.hpp \
	smile/OpenSslException.hpp \
	smile/OS400ErrnoException.hpp \
	smile/OS400Exception.hpp \
	smile/OS400Message.hpp \
	smile/OS400NameValuePair.hpp \
	smile/OS400Value.hpp \
	smile/OS400Version.hpp \
	smile/Program.hpp \
	smile/ProgramParameter.hpp \
	smile/ProgramParameterList.hpp \
	smile/Properties.hpp \
	smile/QsysObject.hpp \
	smile/QsysObjectName.hpp \
	smile/RemoteCommandServiceException.hpp \
	smile/ServiceProgramProcedure.hpp \
	smile/SimpleLogEventFormatter.hpp \
	smile/Smile.hpp \
	smile/System.hpp \
	smile/SystemValue.hpp \
	smile/SystemValueGroup.hpp \
	smile/Text.hpp \
	smile/TextConverter.hpp \
	smile/TextMacros.hpp \
	smile/Time.hpp
CLEANFILES = smile/Smile.hpp

smile/Smile.hpp:
	find $(srcdir)/smile -name ".svn" -prune -o -type f ! -name Exception.hpp -print | awk '{ sub(".hpp.in", ".hpp"); sub("$(srcdir)/", ""); print "#include <"$$0">" }' - | cat $(srcdir)/Smile.hpp.preamble - $(srcdir)/Smile.hpp.postamble > smile/Smile.hpp
