## Process this file with automake to produce Makefile.in
## vi: set noexpandtab:
 
check_LTLIBRARIES = libhominid.la
libhominid_la_SOURCES = \
	AssertionFailure.cpp \
	Test.cpp \
	TestCase.cpp \
	TestObserver.cpp \
	TestResult.cpp \
	TestRunner.cpp \
	TestSuite.cpp
libhominid_la_CPPFLAGS = -I$(srcdir)/..
